--- a/login.html
+++ b/login.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Todo List App</title>
     <link rel="stylesheet" href="styles.css">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://todo-app-backend-three-psi.vercel.app https://accounts.google.com; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' https://lh3.googleusercontent.com data:;">
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
 </head>
 <body>
     <div class="container">
